Added splash screen and launcher icon

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="93"
+    android:viewportHeight="96">
+  <group android:scaleX="0.3584375"
+      android:scaleY="0.37"
+      android:translateX="29.832657"
+      android:translateY="30.24">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M38.272,11.264H36.736C29.141,11.264 23.211,13.184 18.944,17.024C14.763,20.779 12.672,27.477 12.672,37.12C12.672,40.277 12.971,42.496 13.568,43.776C14.165,44.971 14.464,45.653 14.464,45.824C9.856,45.824 6.4,44.885 4.096,43.008C1.877,41.045 0.768,37.845 0.768,33.408C0.768,27.349 2.261,21.845 5.248,16.896C8.235,11.861 12.971,7.808 19.456,4.736C26.027,1.664 34.347,0.128 44.416,0.128C50.048,0.128 56.107,0.64 62.592,1.664C68.053,2.603 72.917,3.072 77.184,3.072C82.645,3.072 87.595,2.176 92.032,0.384C91.861,5.931 90.453,10.027 87.808,12.672C85.163,15.317 81.237,16.64 76.032,16.64C73.301,16.64 70.571,16.427 67.84,16C65.109,15.573 61.227,14.848 56.192,13.824L38.528,96H20.096L38.272,11.264Z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
